k8s/demo-transfer-dashboard/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-transfer-dashboard
  namespace: demo-transfer-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-transfer-dashboard
  template:
    metadata:
      labels:
        app: demo-transfer-dashboard
    spec:
      containers:
        - name: demo-transfer-dashboard
          image: northamerica-northeast1-docker.pkg.dev/phx-01he5rx4wsv/paradire/iidi-demo-transfer-dashboard:main-aa51093c9722e9a7bce39892af24933412a1c5b4-1740524908 # {"$imagepolicy": "flux-system:demo-transfer-dashboard"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
            failureThreshold: 3
            timeoutSeconds: 5
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
