k8s/demo-transfer-dashboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-transfer-dashboard
  namespace: demo-transfer-dashboard
spec:
  selector:
    app: demo-transfer-dashboard
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
