k8s/demo-transfer-dashboard/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-transfer-dashboard-virtual-service
  namespace: istio-ingress
spec:
  hosts:
    - "demo-transfer-dashboard.iidi.alpha.phac.gc.ca"
  gateways:
    - istio-ingress/mesh-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: demo-transfer-dashboard.demo-transfer-dashboard.svc.cluster.local 
            port:
              number: 8080
